# data_serialize

./: .dockerignore  .gitignore  Dockerfile  README.md  mix.exs
bench/: generated.json  json.exs  json_decode.exs  json_decode_large.exs  json_encode.exs  json_encode_large.exs
lib/: data_serialize.ex
lib/data_serialize/: json.ex  native.ex  toml.ex  yaml.ex
lib/data_serialize/cbor/: hex.ex
native/data_serialize/: Cargo.toml  README.md
native/data_serialize/src/: lib.rs
test/: data_serialize_test.exs
test/data_serialize_test/: invertible_test.exs
